Ajustando models e services dos componentes

--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -14,7 +14,7 @@
     <button mat-button routerLink="/admin/gerenciar-veiculos">Gerenciar Veículos</button>
     <button mat-button routerLink="/admin/gerenciar-motoristas">Gerenciar Motoristas</button>
     <!-- <button mat-button routerLink="/admin/registrar-abastecimento">Registrar Abastecimento</button> -->
-    <button mat-button routerLink="/admin/registrar-manutencao">Registrar Manutenção</button>
+    <!-- <button mat-button routerLink="/admin/registrar-manutencao">Registrar Manutenção</button> -->
   </mat-sidenav>
 
  
