--- a/src/app/pages/admin/gerenciar-motoristas/gerenciar-motoristas.component.css
+++ b/src/app/pages/admin/gerenciar-motoristas/gerenciar-motoristas.component.css
@@ -11,3 +11,14 @@
   color: white;
 }
 
+.botao {
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  margin-left: 4px;
+  vertical-align: middle;
+}
+
+.icone{
+  font-size: 15px;
+}
