--- a/src/app/pages/admin/registrar-abastecimento/registrar-abastecimento.component.css
+++ b/src/app/pages/admin/registrar-abastecimento/registrar-abastecimento.component.css
@@ -17,7 +17,8 @@ mat-dialog-actions {
   margin-top: 16px;
 }
 
-h2[mat-dialog-title] {
-  margin-bottom: 8px;
-  text-align: center;
+.actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
 }
