Organização da lógica dos botões e inclusão de diálogos de Início e Finalização de Viagem

--- a/src/app/pages/motorista/home/motorista-home.component.html
+++ b/src/app/pages/motorista/home/motorista-home.component.html
@@ -19,7 +19,7 @@
           <mat-icon>stop</mat-icon> Finalizar Viagem
         </button>
 
-        <button *ngIf="agendamento.status !== 'AGENDADO' && agendamento.status !== 'EM USO'" mat-raised-button color="warn" (click)="visualizarDetalhes(agendamento.id)">
+        <<button mat-raised-button color="warn" (click)="visualizarDetalhes(agendamento.id)">
           <mat-icon>visibility</mat-icon> Ver Detalhes
         </button>
       </div>
