--- a/src/app/pages/admin/agendamento/agendamento.component.html
+++ b/src/app/pages/admin/agendamento/agendamento.component.html
@@ -14,6 +14,11 @@
             <mat-option *ngFor="let m of motoristas" [value]="m"> {{ m.nome }} </mat-option>
         </mat-select>
     </mat-form-field>
+
+    <mat-form-field appearance="fill" >
+          <mat-label>Destino</mat-label>
+          <input matInput formControlName="destino">
+        </mat-form-field>
     
     <mat-form-field appearance="fill">
         <mat-label>Data</mat-label>
