Back para Registrar Abastecimento pronto

--- a/src/app/pages/admin/registrar-abastecimento/registrar-abastecimento.component.html
+++ b/src/app/pages/admin/registrar-abastecimento/registrar-abastecimento.component.html
@@ -4,7 +4,7 @@
     <mat-form-field appearance="fill">
         <mat-label>Veículo</mat-label>
         <mat-select formControlName="veiculo" required>
-            <mat-option *ngFor="let v of veiculos" [value]="v">{{ v.modelo }}</mat-option>
+            <mat-option *ngFor="let v of veiculos" [value]="v.id">{{ v.modelo }}</mat-option>
         </mat-select>
     </mat-form-field>
     
@@ -26,19 +26,19 @@
     
     <mat-form-field appearance="fill">
         <mat-label>Valor</mat-label>
-        <input matInput type="number" formControlName="valorAbastecimento" required>
+        <input matInput type="number" formControlName="valor" required>
     </mat-form-field>
     
     <mat-form-field appearance="fill">
         <mat-label>Quilometragem</mat-label>
-        <input matInput type="number" formControlName="quilometragem" required>
+        <input matInput type="number" formControlName="quilometragemAtual" required>
     </mat-form-field>
     
     
     <mat-form-field appearance="fill">
         <mat-label>Nome Motorista</mat-label>
         <mat-select formControlName="motorista" required>
-            <mat-option *ngFor="let m of motoristas" [value]="m">{{ m.nome }}</mat-option>   
+            <mat-option *ngFor="let m of motoristas" [value]="m.id">{{ m.nome }}</mat-option>   
         </mat-select>
     </mat-form-field>
     
