--- a/src/app/pages/admin/pagina-inicial/pagina-inicial.component.css
+++ b/src/app/pages/admin/pagina-inicial/pagina-inicial.component.css
@@ -72,6 +72,10 @@
   background-color: #27ae60; /* verde */
 }
 
+.status.agendado {
+  background-color: #515352; /* verde */
+}
+
 .card-body p {
   margin: 6px 0;
 }
