--- a/src/app/pages/admin/agendamento/agendamento.component.html
+++ b/src/app/pages/admin/agendamento/agendamento.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Agendar Viagem</h2>
+<h2 mat-dialog-title>Novo Agendamento</h2>
 <form [formGroup]="formAgendamento" (ngSubmit)="onSubmit()" *ngIf="motoristas.length && veiculos.length">
     
     <mat-form-field appearance="fill">
