--- a/src/app/pages/admin/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/pages/admin/pagina-inicial/pagina-inicial.component.html
@@ -31,3 +31,72 @@
   </div>
 </div>
 
+<div>
+  <div class="container_tabela">
+  <table mat-table [dataSource]="agendamentos" class="mat-elevation-z8" style="width: 100%;">
+
+    <!-- ID Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>#ID</th>
+      <td mat-cell *matCellDef="let ag"> {{ ag.id }} </td>
+    </ng-container>
+
+    <!-- Status Column -->
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef>Status</th>
+      <td mat-cell *matCellDef="let ag">
+        <span [ngClass]="ag.status?.toLowerCase()" class="status-badge">
+          {{ ag.status }}
+        </span>
+      </td>
+    </ng-container>
+
+    <!-- Motorista Column -->
+    <ng-container matColumnDef="motorista">
+      <th mat-header-cell *matHeaderCellDef>Motorista</th>
+      <td mat-cell *matCellDef="let ag"> {{ ag.motorista.nome }} </td>
+    </ng-container>
+
+    <!-- Veículo Column -->
+    <ng-container matColumnDef="veiculo">
+      <th mat-header-cell *matHeaderCellDef>Veículo</th>
+      <td mat-cell *matCellDef="let ag"> {{ ag.veiculo.modelo }} </td>
+    </ng-container>
+
+    <!-- Data Column -->
+    <ng-container matColumnDef="data">
+      <th mat-header-cell *matHeaderCellDef>Data</th>
+      <td mat-cell *matCellDef="let ag"> {{ ag.data | date: 'dd/MM/yyyy' }} </td>
+    </ng-container>
+
+    <!-- Ações Column -->
+    <ng-container matColumnDef="acoes">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let ag">
+        <button mat-icon-button color="warn" (click)="excluirAgendamento(ag.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+
+        <ng-container [ngSwitch]="ag.status">
+          <button *ngSwitchCase="'PENDENTE'" mat-raised-button color="primary" class="agViagem" (click)="agendarViagem(ag.id)">
+            Agendar Viagem
+          </button>
+          <button *ngSwitchCase="'EM_USO'" mat-raised-button color="accent" (click)="registrarAbastecimento(ag.id)">
+            Registrar Abastecimento
+          </button>
+          <button *ngSwitchCase="'FINALIZADO'" mat-raised-button color="primary" (click)="registrarManutencao(ag.id)">
+            Registrar Manutenção
+          </button>
+          <button *ngSwitchCase="'AGENDADO'" mat-raised-button disabled>-</button>
+        </ng-container>
+      </td>
+    </ng-container>
+
+    <!-- Render table header and rows -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
+
+</div>
+
