--- a/src/app/pages/admin/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/pages/admin/pagina-inicial/pagina-inicial.component.html
@@ -4,7 +4,8 @@
   <button mat-raised-button color="primary" (click)="openDialog()">Novo Agendamento</button>
 </mat-toolbar>
 
-<div class="container">
+<!-- 
+<div class="container" >
   <div *ngFor="let ag of agendamentos" class="card">
     <div class="card-header">
       <span>Agendamento #{{ ag.id }}</span>
@@ -30,73 +31,154 @@
     </div>
   </div>
 </div>
+-->
+
+<!-- FILTROS -->
+<div  class="lista" >
+  <!-- Filtro por Motorista -->
+  <mat-form-field appearance="fill">
+    <mat-label>Motorista</mat-label>
+    <mat-select [(ngModel)]="filtro.motoristaId" (ngModelChange)="aplicarFiltro()">
+      <mat-option value="">Todos</mat-option>
+      <mat-option *ngFor="let m of motoristas" [value]="m.id">{{ m.nome }}</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <!-- Filtro por Status -->
+  <mat-form-field appearance="fill">
+    <mat-label>Status</mat-label>
+    <mat-select [(ngModel)]="filtro.status" (ngModelChange)="aplicarFiltro()">
+      <mat-option value="">Todos</mat-option>
+      <mat-option value="PENDENTE">PENDENTE</mat-option>
+      <mat-option value="AGENDADO">AGENDADO</mat-option>
+      <mat-option value="FINALIZADO">FINALIZADO</mat-option>
+      <mat-option value="EM_USO">EM_USO</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <!-- Filtro por Data -->
+  <mat-form-field appearance="fill">
+    <mat-label>Data Inicial</mat-label>
+    <input matInput [matDatepicker]="pickerInicio" [(ngModel)]="filtro.dataInicio" (ngModelChange)="aplicarFiltro()">
+    <mat-datepicker-toggle matSuffix [for]="pickerInicio"></mat-datepicker-toggle>
+    <mat-datepicker #pickerInicio></mat-datepicker>
+  </mat-form-field>
+  
+  <mat-form-field appearance="fill">
+    <mat-label>Data Final</mat-label>
+    <input matInput [matDatepicker]="pickerFim" [(ngModel)]="filtro.dataFim" (ngModelChange)="aplicarFiltro()">
+    <mat-datepicker-toggle matSuffix [for]="pickerFim"></mat-datepicker-toggle>
+    <mat-datepicker #pickerFim></mat-datepicker>
+  </mat-form-field>
+
+  <!-- Botão limpar -->
+  <button mat-raised-button color="warn" class="btn_Limpar" (click)="limparFiltros()">Limpar</button>
+
+    <div *ngIf="filtro.dataInicio || filtro.dataFim" class="filtro-info" style="margin: 10px 0;">
+    <strong>
+      Exibindo agendamentos de:
+      <strong>{{ filtro.dataInicio | date:'dd/MM/yyyy' }}</strong>
+      até
+      <strong>{{ filtro.dataFim | date:'dd/MM/yyyy' }}</strong>
+    </strong>
+  </div>
+</div>
 
 <div>
   <div class="container_tabela">
-  <table mat-table [dataSource]="agendamentos" class="mat-elevation-z8" style="width: 100%;">
-
-    <!-- ID Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>#ID</th>
-      <td mat-cell *matCellDef="let ag"> {{ ag.id }} </td>
-    </ng-container>
-
-    <!-- Status Column -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef>Status</th>
-      <td mat-cell *matCellDef="let ag">
-        <span [ngClass]="ag.status?.toLowerCase()" class="status-badge">
-          {{ ag.status }}
-        </span>
-      </td>
-    </ng-container>
-
-    <!-- Motorista Column -->
-    <ng-container matColumnDef="motorista">
-      <th mat-header-cell *matHeaderCellDef>Motorista</th>
-      <td mat-cell *matCellDef="let ag"> {{ ag.motorista.nome }} </td>
-    </ng-container>
-
-    <!-- Veículo Column -->
-    <ng-container matColumnDef="veiculo">
-      <th mat-header-cell *matHeaderCellDef>Veículo</th>
-      <td mat-cell *matCellDef="let ag"> {{ ag.veiculo.modelo }} </td>
-    </ng-container>
-
-    <!-- Data Column -->
-    <ng-container matColumnDef="data">
-      <th mat-header-cell *matHeaderCellDef>Data</th>
-      <td mat-cell *matCellDef="let ag"> {{ ag.data | date: 'dd/MM/yyyy' }} </td>
-    </ng-container>
-
-    <!-- Ações Column -->
-    <ng-container matColumnDef="acoes">
-      <th mat-header-cell *matHeaderCellDef>Ações</th>
-      <td mat-cell *matCellDef="let ag">
-        <button mat-icon-button color="warn" (click)="excluirAgendamento(ag.id)">
-          <mat-icon>delete</mat-icon>
-        </button>
-
-        <ng-container [ngSwitch]="ag.status">
-          <button *ngSwitchCase="'PENDENTE'" mat-raised-button color="primary" class="agViagem" (click)="agendarViagem(ag.id)">
-            Agendar Viagem
-          </button>
-          <button *ngSwitchCase="'EM_USO'" mat-raised-button color="accent" (click)="registrarAbastecimento(ag.id)">
-            Registrar Abastecimento
-          </button>
-          <button *ngSwitchCase="'FINALIZADO'" mat-raised-button color="primary" (click)="registrarManutencao(ag.id)">
-            Registrar Manutenção
-          </button>
-          <button *ngSwitchCase="'AGENDADO'" mat-raised-button disabled>-</button>
+    <table mat-table [dataSource]="lista" class="mat-elevation-z8 tabela-compacta">
+      
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>#ID</th>
+        <td mat-cell *matCellDef="let ag"> {{ ag.id }} </td>
+      </ng-container>
+      
+      <!-- Status Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let ag">
+          <span [ngClass]="ag.status?.toLowerCase()" class="status-badge">
+            {{ ag.status }}
+          </span>
+        </td>
+      </ng-container>
+      
+      <!-- Motorista Column -->
+      <ng-container matColumnDef="motorista">
+        <th mat-header-cell *matHeaderCellDef>Motorista</th>
+        <td mat-cell *matCellDef="let ag"> {{ ag.motorista.nome }} </td>
+      </ng-container>
+      
+      <!-- Veículo Column -->
+      <ng-container matColumnDef="veiculo">
+        <th mat-header-cell *matHeaderCellDef>Veículo</th>
+        <td mat-cell *matCellDef="let ag"> {{ ag.veiculo.modelo }} </td>
+      </ng-container>
+      
+      <!-- Data Column -->
+      <ng-container matColumnDef="data">
+        <th mat-header-cell *matHeaderCellDef>Data</th>
+        <td mat-cell *matCellDef="let ag"> {{ ag.data | date: 'dd/MM/yyyy' }} </td>
+      </ng-container>
+      
+      <!-- Ações Column -->
+      
+      
+      <ng-container matColumnDef="ações">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let ag">
+          <ng-container [ngSwitch]="ag.status">
+            <button *ngSwitchCase="'PENDENTE'" mat-raised-button color="primary" class="agViagem" (click)="agendarViagem(ag.id)">
+              Agendar Viagem
+            </button>
+            <button *ngSwitchCase="'EM_USO'" mat-raised-button color="accent" (click)="registrarAbastecimento(ag.id)">
+              Registrar Abastecimento
+            </button>
+            <button *ngSwitchCase="'FINALIZADO'" mat-raised-button color="primary" (click)="registrarManutencao(ag.id)">
+              Registrar Manutenção
+            </button>
+            <button *ngSwitchCase="'AGENDADO'" mat-raised-button disabled>-</button>
+          </ng-container>
+        </ng-container>  
+        
+        <ng-container matColumnDef="excluirAgendamento">
+          <th mat-header-cell *matHeaderCellDef>Excluir Agendamento</th>
+          <td mat-cell *matCellDef="let ag">
+            <button mat-icon-button color="warn" (click)="excluirAgendamento(ag.id)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
         </ng-container>
-      </td>
-    </ng-container>
-
-    <!-- Render table header and rows -->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-</div>
-
-</div>
-
+        
+        <!-- Render table header and rows -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+  </div>
+  
+  <!-- Filtros -->
+  
+  <!-- Ações Column 
+  <ng-container matColumnDef="acoes">
+    <th mat-header-cell *matHeaderCellDef>Ações</th>
+    <td mat-cell *matCellDef="let ag">
+      <button mat-icon-button color="warn" (click)="excluirAgendamento(ag.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+      
+      <ng-container [ngSwitch]="ag.status">
+        <button *ngSwitchCase="'PENDENTE'" mat-raised-button color="primary" class="agViagem" (click)="agendarViagem(ag.id)">
+          Agendar Viagem
+        </button>
+        <button *ngSwitchCase="'EM_USO'" mat-raised-button color="accent" (click)="registrarAbastecimento(ag.id)">
+          Registrar Abastecimento
+        </button>
+        <button *ngSwitchCase="'FINALIZADO'" mat-raised-button color="primary" (click)="registrarManutencao(ag.id)">
+          Registrar Manutenção
+        </button>
+        <button *ngSwitchCase="'AGENDADO'" mat-raised-button disabled>-</button>
+      </ng-container>
+      
+    </td>
+  </ng-container>
+  -->
