--- a/frontend/src/app/pages/admin/pagina-inicial/pagina-inicial.component.html
+++ b/frontend/src/app/pages/admin/pagina-inicial/pagina-inicial.component.html
@@ -21,7 +21,7 @@
       <mat-option value="PENDENTE">PENDENTE</mat-option>
       <mat-option value="AGENDADO">AGENDADO</mat-option>
       <mat-option value="FINALIZADO">FINALIZADO</mat-option>
-      <mat-option value="EM_USO">EM_USO</mat-option>
+      <mat-option value="EM USO">EM USO</mat-option>
     </mat-select>
   </mat-form-field>
 
@@ -31,7 +31,7 @@
     <mat-datepicker-toggle matSuffix [for]="pickerInicio"></mat-datepicker-toggle>
     <mat-datepicker #pickerInicio></mat-datepicker>
   </mat-form-field>
-  
+
   <mat-form-field appearance="fill">
     <mat-label>Data Final</mat-label>
     <input matInput [matDatepicker]="pickerFim" [(ngModel)]="filtro.dataFim" (ngModelChange)="aplicarFiltro()">
@@ -54,12 +54,12 @@
 <div>
   <div class="container_tabela">
     <table mat-table [dataSource]="lista" class="mat-elevation-z8 tabela-compacta">
-      
+
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>#ID</th>
         <td mat-cell *matCellDef="let ag"> {{ ag.id }} </td>
       </ng-container>
-      
+
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let ag">
@@ -73,17 +73,17 @@
         <th mat-header-cell *matHeaderCellDef>Motorista</th>
         <td mat-cell *matCellDef="let ag"> {{ ag.motorista.nome }} </td>
       </ng-container>
-      
+
       <ng-container matColumnDef="veiculo">
         <th mat-header-cell *matHeaderCellDef>Veículo</th>
         <td mat-cell *matCellDef="let ag"> {{ ag.veiculo.modelo }} </td>
       </ng-container>
-      
+
       <ng-container matColumnDef="data">
         <th mat-header-cell *matHeaderCellDef>Data</th>
         <td mat-cell *matCellDef="let ag"> {{ ag.data | date: 'dd/MM/yyyy' }} </td>
       </ng-container>
-      
+
       <ng-container matColumnDef="ações">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let ag">
@@ -99,8 +99,8 @@
             </button>
             <button *ngSwitchCase="'AGENDADO'" mat-raised-button disabled>-</button>
           </ng-container>
-        </ng-container>  
-        
+        </ng-container>
+
         <ng-container matColumnDef="excluirAgendamento">
           <th mat-header-cell *matHeaderCellDef>Excluir Agendamento</th>
           <td mat-cell *matCellDef="let ag">
@@ -109,12 +109,11 @@
             </button>
           </td>
         </ng-container>
-        
+
         <!-- Render table header and rows -->
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     </div>
   </div>
-  
- 
+
